k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
