k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: devops
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
